pkg/interface/link/src/css/custom.css
html, body {
  height: 100%;
  width: 100%;
  -webkit-font-smoothing: antialiased;
}

p, h1, h2, h3, h4, h5, h6, a, input, textarea, button {
  margin-block-end: unset;
  margin-block-start: unset;
  -webkit-margin-before: unset;
  -webkit-margin-after: unset;
  font-family: Inter, sans-serif;
  padding: 0;
}

textarea, input, button {
  outline: none;
  -webkit-appearance: none;
  border: none;
  background-color: #fff;
}

h2 {
  font-weight: 400;
}

a {
  color: #000;
  text-decoration: none;
}

.inter {
  font-family: Inter, sans-serif;
}

.clamp-3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.clamp-message {
  max-width: calc(100% - 36px - 1.5rem);
}

.clamp-attachment {
  overflow: scroll;
  max-height: 10em;
  max-width: 100%;
}

.lh-16 {
  line-height: 16px;
}

.mono {
  font-family: "Source Code Pro", monospace;
}

.c-default {
  cursor: default;
}

.m0a {
  margin: 0 auto;
}

/* responsive */
@media all and (max-width: 34.375em) {
  .dn-s {
    display: none;
  }
  .flex-basis-100-s, .flex-basis-full-s {
    flex-basis: 100%;
  }
  .h-100-m-40-s {
    height: calc(100% - 40px);
  }
}

@media all and (min-width: 34.375em) {
  .db-ns {
    display: block;
  }
  .flex-basis-30-ns {
    flex-basis: 30vw;
  }
  .h-100-m-40-ns {
    height: calc(100% - 40px);
  }
}

